fix overflow and transition bug

--- a/src/styles/channels.less
+++ b/src/styles/channels.less
@@ -6,7 +6,6 @@
   width: 72px;
   z-index: 200;
   padding-top: 64px;
-  overflow: hidden;
 
   transition: width .1s ease-out;
 
