--- a/src/styles/cover.less
+++ b/src/styles/cover.less
@@ -2,7 +2,6 @@
   position: fixed;
   height: 304px;
   color: #fff;
-  overflow: hidden;
   background-color: #000;
   z-index: 100;
 
