--- a/src/styles/header.less
+++ b/src/styles/header.less
@@ -8,9 +8,7 @@
     color: #fff;
     font-size: 24px;
     line-height: 64px;
-
-    // @todo: conflicts with .channels-menu somehow
-    // transition: opacity .2s ease-out;
+    transition: opacity .2s ease-out;
 
     &-shrink {
       opacity: 0;
